--- a/fluidai_mcp/examples/chat_google_maps.ipynb
+++ b/fluidai_mcp/examples/chat_google_maps.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -27,57 +13,62 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "MCP_URL = f\"{API_URL}/google-maps/mcp\""
-      ],
+      "execution_count": 38,
       "metadata": {
         "id": "L0um77QJ5wte"
       },
-      "execution_count": 38,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "MCP_URL = f\"{API_URL}/google-maps/mcp\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install google-genai"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "LtjNh49d5Qr_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install google-genai"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {
+        "id": "UFf8HQkM5Poj"
+      },
+      "outputs": [],
       "source": [
         "import requests\n",
         "import json\n",
         "from google import genai\n",
         "import os\n",
         "from IPython.display import display, Markdown"
-      ],
-      "metadata": {
-        "id": "UFf8HQkM5Poj"
-      },
-      "execution_count": 40,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {
+        "id": "l0Rmxo155SKE"
+      },
+      "outputs": [],
       "source": [
         "# Set up Gemini API\n",
         "GEMINI_API_KEY = os.environ.get(\"GEMINI_API_KEY\")\n",
         "client = genai.Client(api_key=GEMINI_API_KEY)"
-      ],
-      "metadata": {
-        "id": "l0Rmxo155SKE"
-      },
-      "execution_count": 41,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "id": "fIcX30GA5U1a"
+      },
+      "outputs": [],
       "source": [
         "def call_maps_tool(query):\n",
         "    \"\"\"Call the Google Maps MCP tool with a specific query.\"\"\"\n",
@@ -110,15 +101,15 @@
         "    except Exception as e:\n",
         "        print(f\"Error calling Maps tool: {e}\")\n",
         "        return None"
-      ],
-      "metadata": {
-        "id": "fIcX30GA5U1a"
-      },
-      "execution_count": 42,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {
+        "id": "zWffElYx5Zwx"
+      },
+      "outputs": [],
       "source": [
         "def should_use_maps_tool(query):\n",
         "    \"\"\"Use Gemini to decide if the query requires the Maps tool.\"\"\"\n",
@@ -142,15 +133,15 @@
         "    )\n",
         "    decision = response.text.strip().upper()\n",
         "    return decision == \"YES\""
-      ],
-      "metadata": {
-        "id": "zWffElYx5Zwx"
-      },
-      "execution_count": 43,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {
+        "id": "Q5t2TlB15bu7"
+      },
+      "outputs": [],
       "source": [
         "def answer_with_gemini(query, places_data=None):\n",
         "    \"\"\"Generate a response using Gemini with optional places data.\"\"\"\n",
@@ -189,15 +180,15 @@
         "        contents=[prompt]\n",
         "    )\n",
         "    return response.text"
-      ],
-      "metadata": {
-        "id": "Q5t2TlB15bu7"
-      },
-      "execution_count": 44,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "EN45e54v5eu8"
+      },
+      "outputs": [],
       "source": [
         "def process_user_query(query):\n",
         "    \"\"\"Process a user query using the appropriate tools.\"\"\"\n",
@@ -216,15 +207,15 @@
         "        response = answer_with_gemini(query)\n",
         "\n",
         "    return response"
-      ],
-      "metadata": {
-        "id": "EN45e54v5eu8"
-      },
-      "execution_count": 45,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {
+        "id": "RWgNGNv45jc8"
+      },
+      "outputs": [],
       "source": [
         "def run_assistant():\n",
         "    user_query = input(\"What would you like to know? \")\n",
@@ -238,19 +229,11 @@
         "        print(\"\\n--- Response ---\")\n",
         "        print(response)\n",
         "        print(\"--------------\\n\")"
-      ],
-      "metadata": {
-        "id": "RWgNGNv45jc8"
-      },
-      "execution_count": 46,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Run the assistant\n",
-        "run_assistant()"
-      ],
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -259,36 +242,54 @@
         "id": "-96R9iN85mN0",
         "outputId": "c0cca4e0-d3da-49c1-e499-287b83889892"
       },
-      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "What would you like to know? coffee shops in france\n",
             "Using Google Maps tool to find information...\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "text/markdown": [
+              "Okay, I found some highly-rated coffee shops in Paris, France:\n",
+              "\n",
+              "*   **Clove:** Located at 14 Rue Chappe in the 18th arrondissement, it boasts a rating of 4.9.\n",
+              "*   **The Caféothèque of Paris:** This cafe, with a rating of 4.3, is located at 52 Rue de l'Hôtel de ville in the 4th arrondissement.\n",
+              "*   **Crible - coffee shop:** Find this cafe at 75 Rue Buffon in the 5th arrondissement. It also has a rating of 4.9.\n",
+              "*   **BlackBird Coffee:** Located at 77 Rue du Temple in the 3rd arrondissement, it has a rating of 4.7. It's categorized as both a cafe and a restaurant.\n",
+              "*   **Coffee Specialty Coffee:** This cafe, with a rating of 4.9, is located at 40 Rue Chapon in the 3rd arrondissement.\n",
+              "\n",
+              "All of these options are categorized as cafes and have food available, so you should be able to grab a coffee and a bite to eat. Enjoy!\n"
+            ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
-            ],
-            "text/markdown": "Okay, I found some highly-rated coffee shops in Paris, France:\n\n*   **Clove:** Located at 14 Rue Chappe in the 18th arrondissement, it boasts a rating of 4.9.\n*   **The Caféothèque of Paris:** This cafe, with a rating of 4.3, is located at 52 Rue de l'Hôtel de ville in the 4th arrondissement.\n*   **Crible - coffee shop:** Find this cafe at 75 Rue Buffon in the 5th arrondissement. It also has a rating of 4.9.\n*   **BlackBird Coffee:** Located at 77 Rue du Temple in the 3rd arrondissement, it has a rating of 4.7. It's categorized as both a cafe and a restaurant.\n*   **Coffee Specialty Coffee:** This cafe, with a rating of 4.9, is located at 40 Rue Chapon in the 3rd arrondissement.\n\nAll of these options are categorized as cafes and have food available, so you should be able to grab a coffee and a bite to eat. Enjoy!\n"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "# Run the assistant\n",
+        "run_assistant()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "IGwfUljc5pTH"
-      },
-      "execution_count": null,
-      "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
