--- a/fluidai_mcp/examples/chat_google_maps.ipynb
+++ b/fluidai_mcp/examples/chat_google_maps.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "xQSCyix25FHu"
       },
       "outputs": [],
       "source": [
-        "API_URL = \"https://276d-45-127-89-92.ngrok-free.app\""
+        "API_URL = \"localhost:8099\""
       ]
     },
     {
